--- a/wwr/plan-rafting.html
+++ b/wwr/plan-rafting.html
@@ -19,18 +19,19 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>This site is specifically built for business men all around the globe. This site contains top-notch 
-    products that a company needs for their betterment. There are a lot of benefit you would enjoy when you
-    ask that we serve you. Don't be left out, because we do serve with a purpose actually</p>
+    <p>This site is specifically built for construction businesses all around the globe. This site contains 
+    top-notch aluminium products that a company needs for their finishing to derive a complete look. There
+    are a lot of benefit you would enjoy when you ask that we serve you. Don't be left out, because we do
+    serve with a purpose actually.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
     <p>We are considering buyers who have eyes for quality products. There are no limits as to whether you
-    need to make a specific number of purchase. Our targetted audience need to have a variety of taste
-    because this is what we always opt for. As a company we serve individuals who have vast knowledge on the
-    principles of demand and supply and also know what they want. Because the more you demand, 
-    the more we supply. You can always locate our website on the internet with any of your prefered device.
-    Remember, the internet is a global</p>
+    need to make a specific number of purchase. Our customers are people who are interested in buying
+    building materials to begin their foundation as well as complete their roofings. As a company we serve
+    individuals who have vast knowledge on the principles of demand and supply and also know what they want.
+    We mainly attract people from Africa and Europe. You can always locate our website on the internet
+    with any of your prefered device. Remember, the internet is a global.</p>
     <!-- change this -->
 
     <hr />
