Fonts and Spacing

--- a/wwr/plan-rafting.html
+++ b/wwr/plan-rafting.html
@@ -31,7 +31,7 @@
     building materials to begin their foundation as well as complete their roofings. As a company we serve
     individuals who have vast knowledge on the principles of demand and supply and also know what they want.
     We mainly attract people from Africa and Europe. You can always locate our website on the internet
-    with any of your prefered device. Remember, the internet is a global.</p>
+    with any of your prefered device. Remember, the internet is global.</p>
     <!-- change this -->
 
     <hr />
@@ -74,11 +74,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Rock Salt]
+      Heading Font: Rock Salt
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Roboto]
+      Paragraph Font: Roboto
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
