--- a/sorgborconsult/site-plan.html
+++ b/sorgborconsult/site-plan.html
@@ -149,7 +149,7 @@
         driving growth and success in the modern economy. THE EASY GOAL POST</p>
       
       <p>
-        Sorgbor Consultants is team of experienced consultants has a proven track record of helping
+        Sorgbor Consultants is a team of experienced consultants who have a proven track record of helping
         businesses improve their operations, increase their profits, and stay competitive in today's
         ever-changing market. Whether you're looking to streamline your processes, expand your customer base,
         or develop a new product or service, we have the knowledge and skills to guide you every step of the
@@ -173,10 +173,10 @@
       </p> 
     
       <p>Images for the Home page</p>
-        <img src="images/background.jpg" width="100%" alt="My HomePage Background">
-        <img src="images/group.jpg" width="100%" alt="image for homepage">
-        <img src="images/meeting..jpg" width="100%" alt="image for homepage">
-        <img src="images/one_on_one.jpg" width="100%" alt="image for homepage">
+        <img src="images/background.jpg"  alt="My HomePage Background">
+        <img src="images/group.jpg"  alt="image for homepage">
+        <img src="images/meeting..jpg"  alt="image for homepage">
+        <img src="images/one_on_one.jpg"  alt="image for homepage">
 
       </ul>
       <h3>Our Services</h3>
@@ -224,9 +224,9 @@
         today to learn more about our services and how we can help your business thrive.</p>
 
       <p>Images for the Page 2</p>
-      <img src="images/business.jpg" width="100%" alt="My Page 2 Background">
-      <img src="images/consulting.jpg" width="100%" alt="image for homepage">
-      <img src="images/happy.jpg" width="100%" alt="image for homepage">
+      <img src="images/business.jpg"  alt="My Page 2 Background">
+      <img src="images/consulting.jpg"  alt="image for homepage">
+      <img src="images/happy.jpg"  alt="image for homepage">
 
 
       </ul>
@@ -247,8 +247,8 @@
         kusorgbor.emmanuel01@gmail.com or submit a comment:
       </p>
       <p>Images for the Page 3</p>     
-      <img src="images/done_deal.jpg" width="100%" alt="My HomePage Background">
-      <img src="images/happy_employer.jpg" width="100%" alt="My HomePage Background">
+      <img src="images/done_deal.jpg" alt="My Page 3 Background">
+      <img src="images/happy_employer.jpg" alt="My HomePage Background">
 
       </ul>
       <hr>
