--- a/wwr/index.html
+++ b/wwr/index.html
@@ -15,7 +15,7 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
+            <a href="page2.html">Page 2</a>
             <a href="https://emmakus.github.io/wdd130/wwr/plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
@@ -26,7 +26,7 @@
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">Have An Adventure</h1>
-                <h4>Make Memories with Dry Oar </h4>
+                <h4>Make Memories with Dry Oar</h4>
                 <div class='button-box'>
                     <a class='book' href="contactus.html">Book Now</a>
                 </div>
