--- a/sorgborconsult/site-plan.html
+++ b/sorgborconsult/site-plan.html
@@ -240,7 +240,7 @@
       <p>Last Name</p>
       <P> Email</P>
 
-      <p>What do you want to share? Type your reply here.</p>
+      <p>Type your reply here.</p>
 
       <p>
         For general inquiries, please email
@@ -262,19 +262,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/homepagewireframe.jpg" alt="Home Page Wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Our Services</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/page2wireframe.jpg" alt="Page2 Wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Contact Us</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/page3wireframe.jpg" alt="Page3 Wireframe">
     </main>
   </body>
 
