--- a/sorgborconsult/index.html
+++ b/sorgborconsult/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,18 +12,22 @@
 <body>
     <div id="content">
         <header>
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.gif" alt="My logo">
-            </a>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="page2.html">Our Services</a>
-                <a href="contactus.html">Contact Us</a>
+                <div>
+                    <a id="logo_link" href="index.html">
+                        <img class="logo" src="images/logo.gif" alt="My logo">
+                        <h3 id="para">SORGBOR CONSULTANTS</h3>
+                    </a>
+                </div>
+                
+                <a class="na" href="page2.html">Our Services</a>
+                <a class="na" href="contactus.html">Contact Us</a>
+                <a class="na" href="index.html">Home</a>
             </nav>
         </header>
         <div id="hero">
             <div id="hero-box">
-                <img id="hero-img" src="images/background.jpg" alt="Two Business men sharing ideas">
+                <img id="hero-img" src="images/background.jpg" alt="Two Business men sharing ideas" >
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">SORGBOR CONSULTANTS</h1>
@@ -36,48 +43,41 @@
                 knowledge and skills to guide you every step of the way.</p>
         </div>
         <main class="home-grid">
-            <div>
-                <h2>Work With Us</h2>
-                <p>At our consulting firm, we believe that every business is unique, and that's why we take
-                    a personalized approach to every client we work with. You will be provided with
-                    professionals who take their time to understand your specific needs and goals, and then
-                    develop customized solutions that are tailored to your business.</p>
-                <p><a href="page2.html">
-                        <h3>Work with us</h3>
-                    </a></p>
+            <div class="grid-container">
+                <div class="home-head">
+                    <h2>Work With Us</h2>
+                    <p>At our consulting firm, we believe that every business is unique, and that's why we take
+                        a personalized approach to every client we work with. You will be provided with
+                        professionals who take their time to understand your specific needs and goals, and then
+                        develop customized solutions that are tailored to your business.
+                    </p>
+                    <a class="work1" href="page2.html">Work with us</a>
+                </div>
+
+                <div class="home-pic">
+                    <img class="businessmen" src="images/one_on_one.jpg" alt="Happy Businessmen" max-width="700" height="480">
+                    <div class="msg">
+                        <h2>Become a Member of Our Team of Consultants</h2>
+                        <p>Do you want to be a part of our team? Apply to be a part of our next recruitment
+                            cycle. Our team comprises of people from all walks of life.</p>
+                        <a class="join" href="contactus.html">Join Us</a>
+                    </div>
+                </div> 
+
+                <div class="home-img">
+                    <img class="grp-img" src="images/meeting..jpg" alt="Group meeting" max-width="700" height="510">
+                </div>
             </div>
-
-            <img class="grp-img" src="images/meeting..jpg" alt="Group meeting">
-
-
-            <div class="background"></div>
-            <img class="businessmen" src="images/one_on_one.jpg" alt="Happy Businessmen">
-            <section class="msg">
-                <h2>Become a Member of Our Team of Consultants</h2>
-                <p>Do you want to be a part of our team? Apply to be a part of our next recruitment cycle. Our team
-                    comprises of people from all walks of life.</p>
-                <a class='join' href="contactus.html">Join Us</a>
-            </section>
         </main>
         <footer>
-            <p>Copyright &copy; 2023 - Sorgbor Consultants</p>
-            <p><a href="site-plan.html">Site Plan</a></p>
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.gif" alt="My logo">
-                <p><a href="index.html">
-                        <h3>SORGBOR CONSULTANTS</h3>
-                    </a></p>
-
-            </a>
-
-            <div class="contact-icon">
-                <img src="images/contactus.png" alt="My Contact Icon">
-                <p><a href="contactus.html">
-                        <h3>Contact Us</h3>
-                    </a></p>
+            <div>
+                <a id="logo_link" href="index.html">
+                    <img class="logo" src="images/logo.gif" alt="My logo"  max-width="100" height="100">
+                </a>     
+                <p><a class="site1" href="site-plan.html">Site Plan</a></p>
             </div>
-
-            <div class="social">
+            <section class="layout">
+            <div class="social grow1">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
                 </a>
@@ -88,7 +88,19 @@
                     <img src="images/instagram.png" alt="instagram icon">
                 </a>
             </div>
-        </footer>
+            <div class="grow1">
+                <p>Copyright &copy; 2023 - Sorgbor Consultants</p> 
+            </div>
+            <div class="grow1-cont"> 
+                <a href="contactus.html" target="_blank">
+                <img src="images/contactus.png" alt="contact icon" max-width="63" height="63">
+                <a id="logo_link" href="index.html"></a>
+                <p><a class="contact-p" href="contactus.html"><h4>Contact Us</h4></a></p>
+            </a>
+        </div>
+            </section>
+             
+        </footer> 
     </div>
 </body>
 
