--- a/sorgborconsult/site-plan.html
+++ b/sorgborconsult/site-plan.html
@@ -63,8 +63,8 @@
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
         <tr>
           <td class="primary">[#396E94]</td>
-          <td class="secondary">[#7CAFF1]</td>
-          <td class="accent1">[#FAD20C]</td>
+          <td class="secondary">[#FAD20C]</td>
+          <td class="accent1">[#A42212]</td>
           <td class="accent2"></td>
         </tr>
       </table>
