--- a/sorgborconsult/index.html
+++ b/sorgborconsult/index.html
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="home-pic">
-                    <img class="businessmen" src="images/one_on_one.jpg" alt="Happy Businessmen" max-width="100%" height="510">
+                    <img class="businessmen" src="images/one_on_one.jpg" alt="Happy Businessmen">
                     <div class="msg">
                         <h2>Become a Member of Our Team of Consultants</h2>
                         <p>Do you want to be a part of our team? Apply to be a part of our next recruitment
@@ -64,14 +64,14 @@
                 </div> 
 
                 <div class="home-img">
-                    <img class="grp-img" src="images/meeting..jpg" alt="Group meeting" max-width="700" height="510">
+                    <img class="grp-img" src="images/meeting..jpg" alt="Group meeting">
                 </div>
             </div>
         </main>
         <footer>
             <div>
                 <a id="logo_link" href="index.html">
-                    <img class="logo" src="images/logo.gif" alt="My logo"  max-width="100" height="100">
+                    <img class="logo" src="images/logo.gif" alt="My logo">
                 </a>     
                 <p><a class="site1" href="site-plan.html">Site Plan</a></p>
             </div>
