--- a/sorgborconsult/page2.html
+++ b/sorgborconsult/page2.html
@@ -9,7 +9,7 @@
     <title>Sorgbor Consultants | Our Services</title>
 </head>
 
-<body>
+<body class="body1">
     <div id="content">
         <header>
             <nav>
@@ -34,16 +34,17 @@
         </div>
 
         <main id="home-grid2">
+            <section>
             <div class="one">
                 <p>Sorgbor Consultants can provide medium-sized businesses, entrepreneurs, and start-ups
                     with a wealth of information and ideas that can help them improve their operations and
-                    achieve their goals. Here are just a few examples of the types of content and resources
-                    that Sorgbor Consultants could provide.</p>
-            </div>
+                    achieve their goals. <br> Here are just a few examples of the types of content and resources that Sorgbor
+                    Consultants could provide. </p>
+            </section>
             <div class="parent">
                 <div class="two">
                     <p>Business strategy: One of the most important aspects of running a successful business is
-                        p having a solid strategy in place. Our team will provide resources and advice on how to develop
+                        having a solid strategy in place. Our team will provide resources and advice on how to develop
                         a business strategy that is tailored to your specific needs and goals.</p>
                 </div>
 
@@ -54,7 +55,7 @@
                         such as budgeting, cash flow management, and investment strategies.</p>
                 </div>
 
-                <div class="five">
+                <div class="four">
                     <p>
                         Marketing and sales: To expand your business and reach new customers, you must have an effective
                         marketing and sales strategy in place. Sorgbor Consultants will provide resources and advice on
@@ -64,7 +65,7 @@
 
                 </div>
 
-                <div class="six">
+                <div class="five">
                     <p>Technology and innovation: Technology is constantly evolving, and it can be difficult for
                         businesses
                         to keep up with the latest trends and innovations. Sorgbor Consultants will provide resources
@@ -74,7 +75,7 @@
                         and hardware solutions, cloud computing, and cybersecurity.</p>
                 </div>
 
-                <div class="eight">
+                <div class="six">
                     <p>Podcasts: Podcasts are an increasingly popular medium for sharing information and insights.
                         Considering the level of your business and its competitive mode, we could create a podcast
                         series
@@ -82,7 +83,7 @@
                         related to business management.</p>
                 </div>
 
-                <div class="nine">
+                <div class="seven">
                     <p>Expert Interview: Interviews with experts in a variety of fields of business can provide valuable
                         insights and advice to other business owners. Sorgbor Consultants will conduct interviews with
                         business leaders, consultants, and academics in order to share their knowledge and expertise
@@ -94,25 +95,34 @@
                         your behalf because we are aware of how competitive the business economy is right now.</p>
                 </div>
 
-                <div class="ten">
-                    <p>So there you have it. If you are a small startup firm, we are here to help you succeed. Contact
-                        us
-                        today to learn more about our services and how we can help your business thrive.</p>
+                <div class="eight">
+                    <p>Our team of experienced consultants has a proven track record of helping businesses
+                        improve their operations, increase their profits, and stay competitive in today's
+                        ever-changing market. Whether you're looking to streamline your processes, expand
+                        your customer base, or develop a new product or service, we have the knowledge and
+                        skills to guide you every step of the way. At our consulting firm, we believe that
+                        every business is unique, and that's why we take a personalized approach to every
+                        client we work with. We take the time to understand your specific needs and goals,
+                        and then develop customized solutions that are tailored to your business.</p>
+                        <br>
+                    <p>So there you have it. If you are a small startup firm, we are here to help you
+                        succeed. To learn more about our services and how we can help your business
+                        thrive.<a class="contact-pp" href="contactus.html">Contact us</a></p> 
                 </div>
 
-                <div>
-                    <img src="images/happy.jpg" alt="Colleagues with one goal">
+               <div class="first-img">
+                    <img src="images/happy.jpg" alt="Colleagues with one goal" height="200px">
                 </div>
 
-                <div>
-                    <img src="images/consulting.jpg" alt="Two people working">
-                </div>
-            </div>
+                <div class="second-img">
+                    <img src="images/consulting.jpg" alt="Two people working" height="200px">
+                </div> 
+            </div> 
         </main>
         <footer>
             <div>
                 <a id="logo_link" href="index.html">
-                    <img class="logo" src="images/logo.gif" alt="My logo" max-width="100" height="100">
+                    <img class="logo" src="images/logo.gif" alt="My logo">
                 </a>
             </div>
             <section class="layout">
