No Validator Errors.

--- a/sorgborconsult/index.html
+++ b/sorgborconsult/index.html
@@ -14,7 +14,7 @@
         <header>
             <nav>
                 <div>
-                    <a id="logo_link" href="index.html">
+                    <a href="index.html">
                         <img class="logo" src="images/logo.gif" alt="My logo">
                         <h3 id="para">SORGBOR CONSULTANTS</h3>
                     </a>
@@ -72,34 +72,32 @@
             <div>
                 <a id="logo_link" href="index.html">
                     <img class="logo" src="images/logo.gif" alt="My logo">
-                </a>     
-                <p><a class="site1" href="site-plan.html">Site Plan</a></p>
+                </a>
             </div>
             <section class="layout">
-            <div class="social grow1">
-                <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
-                </a>
-                <a href="https://twitter.com" target="_blank">
-                    <img src="images/twitter.png" alt="twitter icon">
-                </a>
-                <a href="https://instagram.com" target="_blank">
-                    <img src="images/instagram.png" alt="instagram icon">
-                </a>
-            </div>
-            <div class="grow1">
-                <p>Copyright &copy; 2023 - Sorgbor Consultants</p> 
-            </div>
-            <div class="grow1-cont"> 
-                <a href="contactus.html" target="_blank">
-                <img src="images/contactus.png" alt="contact icon" max-width="63" height="63">
-                <a id="logo_link" href="index.html"></a>
-                <p><a class="contact-p" href="contactus.html"><h4>Contact Us</h4></a></p>
-            </a>
-        </div>
+                <div class="social grow1">
+                    <a href="https://facebook.com" target="_blank">
+                        <img src="images/facebook.png" alt="fb icon">
+                    </a>
+                    <a href="https://twitter.com" target="_blank">
+                        <img src="images/twitter.png" alt="twitter icon">
+                    </a>
+                    <a href="https://instagram.com" target="_blank">
+                        <img src="images/instagram.png" alt="instagram icon">
+                    </a>
+                </div>
+                <div class="grow1">
+                    <p>Copyright &copy; 2023 - Sorgbor Consultants</p>
+                </div>
+                
+                <div class="grow1-cont"> 
+                    <a href="contactus.html"></a>
+                        <img src="images/contactus.png" alt="contact icon" width="63" height="63">
+                        <a href="contactus.html"><h4>Contact Us</h4></a>
+                </div>
             </section>
-             
-        </footer> 
+
+        </footer>
     </div>
 </body>
 
