--- a/sorgborconsult/page2.html
+++ b/sorgborconsult/page2.html
@@ -14,7 +14,7 @@
         <header>
             <nav>
                 <div>
-                    <a id="logo_link" href="index.html">
+                    <a href="index.html">
                         <img class="logo" src="images/logo.gif" alt="My logo">
                         <h3 id="para">SORGBOR CONSULTANTS</h3>
                     </a>
@@ -34,13 +34,13 @@
         </div>
 
         <main id="home-grid2">
-            <section>
             <div class="one">
                 <p>Sorgbor Consultants can provide medium-sized businesses, entrepreneurs, and start-ups
                     with a wealth of information and ideas that can help them improve their operations and
                     achieve their goals. <br> Here are just a few examples of the types of content and resources that Sorgbor
-                    Consultants could provide. </p>
-            </section>
+                    Consultants could provide.
+                </p>
+            </div>
             <div class="parent">
                 <div class="two">
                     <p>Business strategy: One of the most important aspects of running a successful business is
@@ -111,11 +111,11 @@
                 </div>
 
                <div class="first-img">
-                    <img src="images/happy.jpg" alt="Colleagues with one goal" height="200px">
+                    <img src="images/happy.jpg" alt="Colleagues with one goal" height="200">
                 </div>
 
                 <div class="second-img">
-                    <img src="images/consulting.jpg" alt="Two people working" height="200px">
+                    <img src="images/consulting.jpg" alt="Two people working" height="200">
                 </div> 
             </div> 
         </main>
@@ -139,16 +139,12 @@
                 </div>
                 <div class="grow1">
                     <p>Copyright &copy; 2023 - Sorgbor Consultants</p>
-
                 </div>
-                <div class="grow1-cont">
-                    <a href="contactus.html" target="_blank">
-                        <img src="images/contactus.png" alt="contact icon" max-width="63" height="63">
-                        <a id="logo_link" href="index.html"></a>
-                        <p><a href="contactus.html"></a>
-                            <h4>Contact Us</h4>
-                        </p>
-                    </a>
+
+                <div class="grow1-cont"> 
+                    <a href="contactus.html"></a>
+                        <img src="images/contactus.png" alt="contact icon" width="63" height="63">
+                        <a href="contactus.html"><h4>Contact Us</h4></a>
                 </div>
             </section>
 
